--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 波兰-537.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-336.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-847.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-512.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 波兰-332.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇸🇬 新加坡-501.8KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-3.88MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hinet.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
   - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-7.09MB/s(Youtube:不良林), server: node.sin.entrance.cyou, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: node.sin.entrance.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 波兰-332.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
