--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-336.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-847.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇸🇬 新加坡-2.57MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇳🇱 荷兰-1.16MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-512.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 波兰-332.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇸🇬 新加坡-501.8KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-3.88MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-329.9KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-560.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-516.9KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-812.5KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-7.54MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
-      - 波兰-332.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
