--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.57MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇳🇱 荷兰-1.16MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-512.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇺🇸 美国-635.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇭🇰 香港-220.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-7.17MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇩🇪 德国-329.9KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-560.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-516.9KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
