--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-635.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇭🇰 香港-220.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-7.17MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇩🇪 德国-329.9KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-560.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-516.9KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-812.5KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-7.54MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-473.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-5.10MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-1001.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-635.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-329.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-560.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-812.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
